--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,8 +17,8 @@
    <widget class="QGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>70</y>
+      <x>20</x>
+      <y>50</y>
       <width>1061</width>
       <height>491</height>
      </rect>
@@ -55,9 +55,51 @@ background-color: rgb(34,139, 34);</string>
 background-color: rgb(0, 0, 0);</string>
     </property>
    </widget>
+   <widget class="QLabel" name="labelPlayer1">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>340</y>
+      <width>151</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>labelPlayer</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelPlayer2">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>280</y>
+      <width>141</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>labelPlay</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="labelBallon">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>310</y>
+      <width>131</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>labelBall</string>
+    </property>
+   </widget>
    <zorder>line</zorder>
    <zorder>graphicsView</zorder>
    <zorder>lcdNumber</zorder>
+   <zorder>labelPlayer1</zorder>
+   <zorder>labelPlayer2</zorder>
+   <zorder>labelBallon</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -65,7 +107,7 @@ background-color: rgb(0, 0, 0);</string>
      <x>0</x>
      <y>0</y>
      <width>1772</width>
-     <height>26</height>
+     <height>25</height>
     </rect>
    </property>
   </widget>
