--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,18 +14,33 @@
    <string>JeuFoot</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <widget class="QGraphicsView" name="graphicsView">
+   <widget class="MyGraphicsView" name="graphicsView">
     <property name="geometry">
      <rect>
-      <x>20</x>
+      <x>9</x>
       <y>50</y>
-      <width>1061</width>
-      <height>491</height>
+      <width>1071</width>
+      <height>490</height>
      </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>1100</width>
+      <height>500</height>
+     </size>
     </property>
     <property name="styleSheet">
      <string notr="true">
 background-color: rgb(34,139, 34);</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Shape::Box</enum>
+    </property>
+    <property name="verticalScrollBarPolicy">
+     <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
+    </property>
+    <property name="horizontalScrollBarPolicy">
+     <enum>Qt::ScrollBarPolicy::ScrollBarAlwaysOff</enum>
     </property>
    </widget>
    <widget class="Line" name="line">
@@ -54,12 +69,15 @@ background-color: rgb(34,139, 34);</string>
      <string notr="true">color: rgb(0, 0, 0);
 background-color: rgb(0, 0, 0);</string>
     </property>
+    <property name="intValue" stdset="0">
+     <number>3</number>
+    </property>
    </widget>
    <widget class="QLabel" name="labelPlayer1">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>340</y>
+      <x>20</x>
+      <y>160</y>
       <width>151</width>
       <height>20</height>
      </rect>
@@ -71,8 +89,8 @@ background-color: rgb(0, 0, 0);</string>
    <widget class="QLabel" name="labelPlayer2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>280</y>
+      <x>10</x>
+      <y>70</y>
       <width>141</width>
       <height>20</height>
      </rect>
@@ -85,7 +103,7 @@ background-color: rgb(0, 0, 0);</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>310</y>
+      <y>110</y>
       <width>131</width>
       <height>20</height>
      </rect>
@@ -94,12 +112,29 @@ background-color: rgb(0, 0, 0);</string>
      <string>labelBall</string>
     </property>
    </widget>
+   <widget class="QLCDNumber" name="lcdNumber_2">
+    <property name="geometry">
+     <rect>
+      <x>200</x>
+      <y>90</y>
+      <width>64</width>
+      <height>23</height>
+     </rect>
+    </property>
+    <property name="digitCount">
+     <number>5</number>
+    </property>
+    <property name="value" stdset="0">
+     <double>1.000000000000000</double>
+    </property>
+   </widget>
    <zorder>line</zorder>
    <zorder>graphicsView</zorder>
    <zorder>lcdNumber</zorder>
    <zorder>labelPlayer1</zorder>
    <zorder>labelPlayer2</zorder>
    <zorder>labelBallon</zorder>
+   <zorder>lcdNumber_2</zorder>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
@@ -113,6 +148,13 @@ background-color: rgb(0, 0, 0);</string>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MyGraphicsView</class>
+   <extends>QGraphicsView</extends>
+   <header>mygraphicsview.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
